RESOLVED FIXED46031
REGRESSION (r67762): Over 160 layout tests failing due to incorrect zoom factors in subframes
https://bugs.webkit.org/show_bug.cgi?id=46031
Summary REGRESSION (r67762): Over 160 layout tests failing due to incorrect zoom fact...
mitz
Reported 2010-09-18 00:50:15 PDT
Patch forthcoming.
Attachments
Make parent{Page,Text}ZoomFactor() return the parent frame’s zoom factor (1.47 KB, patch)
2010-09-18 00:52 PDT, mitz
eric: review+
mitz
Comment 1 2010-09-18 00:52:40 PDT
Created attachment 67999 [details] Make parent{Page,Text}ZoomFactor() return the parent frame’s zoom factor
Eric Seidel (no email)
Comment 2 2010-09-18 03:00:00 PDT
Comment on attachment 67999 [details] Make parent{Page,Text}ZoomFactor() return the parent frame’s zoom factor LGTM. You'll need to remove the OOPS about the no new tests of course.
mitz
Comment 3 2010-09-18 03:04:30 PDT
Darin Adler
Comment 4 2010-09-18 15:59:32 PDT
Comment on attachment 67999 [details] Make parent{Page,Text}ZoomFactor() return the parent frame’s zoom factor Oops! Thanks for fixing this!
Note You need to log in before you can comment on or make changes to this bug.