REGRESSION (r67762): Over 160 layout tests failing due to incorrect zoom factors in subframes https://bugs.webkit.org/show_bug.cgi?id=46031

Reviewed by Eric Seidel.

* page/Frame.cpp:
(WebCore::parentPageZoomFactor): Return the zoom factor of the parent frame.
(WebCore::parentTextZoomFactor): Ditto.



Canonical link: https://commits.webkit.org/58483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67777 268f45cc-cd09-0410-ab3c-d52691b4dbfc