WebCore/page/Frame.cpp
@@ -134,7 +134,7 @@ static inline float parentPageZoomFactor(Frame* frame)
     Frame* parent = frame->tree()->parent();
     if (!parent)
         return 1;
-    return frame->pageZoomFactor();
+    return parent->pageZoomFactor();
 }
 
 static inline float parentTextZoomFactor(Frame* frame)
@@ -142,7 +142,7 @@ static inline float parentTextZoomFactor(Frame* frame)
     Frame* parent = frame->tree()->parent();
     if (!parent)
         return 1;
-    return frame->textZoomFactor();
+    return parent->textZoomFactor();
 }
 
 inline Frame::Frame(Page* page, HTMLFrameOwnerElement* ownerElement, FrameLoaderClient* frameLoaderClient)
